--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="RN.png" type="image/x-icon">
     <title>NURSE SHAIIIIIIRAAAA</title>
     
     <link rel="stylesheet" href="style2.css">
