--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     
     <div class="content">
-      <h1>YOU MADE IT ALIIIII!!</h1>
+      <h1>YOU DID IT ALIIIII!!</h1>
       <button class="ask" onclick="clickMo()"> FLOWERS?? </button>
     </div>
 
